[monitor] add @LogRequestDetails annotation to getHeatLineInfo and getHeatLinesByIds methods